Issue #SB-18683 Resend otp and submit otp button text is not aligned properly in OTP page when user selects  tamil language

--- a/themes/themes-portal.scss
+++ b/themes/themes-portal.scss
@@ -432,11 +432,6 @@ html[layout='joy'] {
 		padding: calculateRem(8px) !important;
 		height: 3rem !important;
 		width: 3rem !important;
-		&.sb-btn-normal {
-            height: 3rem !important;
-            width: 3rem !important;
-        }
-
 		span {
 			display: none;
 		}
